Changed fixed Navbar z-index to not go over Sidepane and Content Overlay.

--- a/src/less/core-theme/navbar.less
+++ b/src/less/core-theme/navbar.less
@@ -31,7 +31,7 @@ div[data-syiro-component="navbar"]{
         left: 0;
         right: 0;
         position: fixed;
-        z-index: 9999;
+        z-index: 7;
     }
 
     // #endregion
